moved file to public

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sharon Blessy Portfolio</title>
+    <title>Sharon Blessy</title>
    
-    <link rel="shortcut icon" href="/src/Icons/sb-icon.svg " type="image/svg+xml">
+    <link rel="shortcut icon" href="/sb-icon.svg" type="image/svg+xml">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
